# book-management-backend/internal/routers/book_routes.go
@@ -11,5 +11,6 @@ func RegisterBookRoutes(rg *gin.RouterGroup, handler *handlers.BookHandler) {
 	{
 		books.GET("/:id", handler.GetBookByID)
 		books.GET("", handler.GetAllBooks)
+		books.POST("", handler.CreateBook)
 	}
 }
